--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-      "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js",
-      "test": "jest"
-    },
-
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
@@ -26,6 +26,7 @@
     "eslint": "^9.36.0",
     "jest": "^30.1.3",
     "nodemon": "^3.1.10",
+    "prisma": "^6.16.2",
     "supertest": "^7.1.4"
   }
 }
