--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "node-fetch": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
@@ -27,7 +30,7 @@
     "eslint": "^9.36.0",
     "jest": "^30.1.3",
     "nodemon": "^3.1.10",
-    "prisma": "^6.16.2",
+    "prisma": "^6.16.3",
     "supertest": "^7.1.4"
   }
 }
